@@ -7,10 +7,12 @@
     "client.AbstractMountedCannonContraptionMixin",
     "client.CameraAccessor",
     "client.CannonMountDisplaySourceMixin",
+    "client.ClientLevelAccessor",
     "client.EntityClientMixin",
     "client.EntityRenderDispatcherMixin",
     "client.GameRendererMixin",
     "client.HumanoidPoseMixin",
+    "client.LevelRendererMixin",
     "client.LightingMixin",
     "client.PitchOrientedContraptionEntityMixin",
     "client.PoleContraptionMixin",
